--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width:device-width, initial-scale=1">
 	<title> Contact Jett Blaschka </title>
-	<link rel="shortcut icon" type="image.jpg" href="images/small-profile.jpg">
+	<link rel="shortcut icon" href="images/small-profile.jpg">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style.production.css">
