updated phone number and contact form

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 			</ul>
 		</nav>
 	</header>
-	<a href="tel:(123) 456-7890"> Call now!</a>
+	<a href="tel:(123)456-7890"> Call now!</a>
 	<h1>
 		Contact
 	</h1>
@@ -40,12 +40,12 @@
 			20202 Pittsburgh PA <br>
 			United States <br>
 			<br>
-			<a href="tel:(123) 456-7890"> Phone Number: (123) 456-7890 </a> <br>
+			<a href="tel:(123)456-7890"> Phone Number: (123) 456-7890 </a> <br>
 			<a href="mailto:jettblaschka@gmail.com">jettblaschka@gmail.com</a>
 		</p>
 	</div>
 
-	<form action="" method="post" id="contatct-form">
+	<form action="#" method="post" id="contatct-form">
 		<label class="standard-label" for="contact-email">*E-mail:</label>
 		<input type="email" id="contact-email" required="">
 
