--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="fr">
 <html>
 <head>
 	<meta charset="utf-8">
@@ -43,8 +43,6 @@
 	</div>
 
 	<a href="#">default link</a>
-	<button type="button">Default button</button>
-	<button class="button_secondary">Secondary button</button>
 
 	<footer class="page_footer">
 		<p>
