added <div> to index.html profile content

--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
 		</nav>
 	</header>
 	<div class="profile">
-		<!-- add photo of me here -->
-		<img src="images/IMG_0365.JPG" class="profile_portrait" alt="A photograph of me">
-		<h1> Hello World </h1>
-		<p>
-			My name is Jett Blaschka. <br> I am a <span> web </span> developer from the Virgin Islands.
-		</p>
-		<a href="#">check out some of my code</a>
+		<div class="profile-cntainer">
+			<div class="profile-pic">
+				<img src="images/IMG_0365.JPG" class="profile_portrait" alt="A photograph of me">
+			</div>
+			<div class="description">
+				<h1> Hello World </h1>
+				<p>
+					My name is Jett Blaschka. <br> I am a <span> web </span> developer from the Virgin Islands.
+				</p>
+				<a href="#">check out some of my code</a>
+			</div>
+		</div>
 	</div>
 
 	<footer class="page_footer">
