updated spelling for .profile-container

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</nav>
 	</header>
 	<div class="profile">
-		<div class="profile-cntainer">
+		<div class="profile-container">
 			<div class="profile-pic">
 				<img src="images/IMG_0365.JPG" class="profile_portrait" alt="A photograph of me">
 			</div>
