--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<img src="images/IMG_0365.JPG" class="profile_portrait" alt="A photograph of me">
 			</div>
 			<div class="description">
-				<h1> Hello World </h1>
+				<h1> Welcome! </h1>
 				<p>
 					My name is Jett Blaschka. <br> I am a <span> web </span> developer from the Virgin Islands.
 				</p>
